2011-08-25  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Switch to GTK+ 3.x by default
        https://bugs.webkit.org/show_bug.cgi?id=63047

        * configure.ac: Modify the default value of the --with-gtk option to be 3.0.

2011-08-24  Philippe Normand  <pnormand@igalia.com>

        [GTK] bump GStreamer requirement to 0.10.30
        https://bugs.webkit.org/show_bug.cgi?id=66860

        Reviewed by Martin Robinson.

        * configure.ac:

2011-08-23  Steve Block  <steveblock@google.com>

        Remove all mention of removed Android files from build scripts
        https://bugs.webkit.org/show_bug.cgi?id=66755

        Reviewed by Tony Gentilcore.

        * Source/cmake/WebKitPackaging.cmake:

2011-08-19  MORITA Hajime  <morrita@google.com>

        Spell-checking doesn't recognize word boundaries on contests inserted by execCommand('insertHTML')
        https://bugs.webkit.org/show_bug.cgi?id=65902

        Reviewed by Ryosuke Niwa.
        
        Add export for window.internals object.

        * Source/autotools/symbols.filter:

2011-08-16  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Csaba Osztrogonác.

        Need AtomicStrings for the various font family names
        https://bugs.webkit.org/show_bug.cgi?id=28024

        * Source/cmake/WebKitMacros.cmake: Add new macro.

2011-08-11  Xan Lopez  <xlopez@igalia.com>

        [GTK] Update NEWS and configure.ac for 1.5.2 release

        Reviewed by Gustavo Noronha.

        * configure.ac: update for release.

2011-08-10  Varun Jain  <varunjain@google.com>

        WebViewImpl::selectionRange should return false if there is no selection
        https://bugs.webkit.org/show_bug.cgi?id=66012

        Reviewed by Darin Fisher.

        *  Source/WebKit/chromium/src/WebViewImpl.cpp:

2011-08-10  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix. Do not build LocaleToScriptMappingICU.cpp for now